--- a/ArticlesApp/ArticlesApp/Views/TabbedMenu.xaml
+++ b/ArticlesApp/ArticlesApp/Views/TabbedMenu.xaml
@@ -22,6 +22,7 @@
                   
                    TextColorSelected="Black"
                    FontSize="36"
+                   FontSizeSelected="36"
                 x:Name="HomeTab">
                 
                 <local:MainPage/>
