--- a/ArticlesApp/ArticlesApp/Views/MainPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/MainPage.xaml
@@ -5,17 +5,39 @@
              xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              NavigationPage.HasNavigationBar="False"
              xmlns:fontawesome="clr-namespace:ArticlesApp.Fonts"
->
+             BackgroundColor="White"
+>            
     <ContentView.Content>
        
             <AbsoluteLayout  >
-            <StackLayout AbsoluteLayout.LayoutBounds="0,0,500,50000" BackgroundColor="White">
-                <StackLayout Orientation="Horizontal" Padding="20,10,0,0" HorizontalOptions="StartAndExpand">
-                    <Label FontFamily="OldStandardTT" Text="ArtiFind"  FontSize="35" TextColor="#303985"/>
-                    <ImageButton Source="paperplane.jpg" HorizontalOptions="End" WidthRequest="25"/>
-                </StackLayout>
+            <StackLayout AbsoluteLayout.LayoutBounds="0,0,500,50000" >
+                <Grid Padding="20,10,0,0" HorizontalOptions="StartAndExpand">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="300"/>
+                        <ColumnDefinition Width="50"/>
+                    </Grid.ColumnDefinitions>
+                    <Label FontFamily="OldStandardTT" Text="ArtiFind"  FontSize="35" TextColor="#303985" Grid.Column="0" Grid.Row="0"/>
+                    <ImageButton Source="planeIcon.png" BackgroundColor="Transparent" HorizontalOptions="End" WidthRequest="35" Grid.Column="1" Grid.Row="0" VerticalOptions="CenterAndExpand"/>
+                </Grid>
+                <BoxView HeightRequest="1" BackgroundColor="Black" />
+                <CollectionView ItemsSource="{Binding  Articles}">
+                    <CollectionView.ItemsLayout>
+                        <GridItemsLayout Span="2" Orientation="Vertical" />
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <yummy:PancakeView Border="{yummy:BorderMarkup Color={Binding diviedColor}, Thickness='1'}">
+                                
+                            </yummy:PancakeView>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
             </StackLayout>
-            <ImageButton AbsoluteLayout.LayoutBounds="310,490,65,65" BackgroundColor="Transparent" Clicked="ImageButton_Clicked" Source="buton.png"/>
+            <ImageButton AbsoluteLayout.LayoutBounds="317,500,65,65" BackgroundColor="Transparent" Clicked="ImageButton_Clicked" Source="buton.png"/>
         </AbsoluteLayout>
     </ContentView.Content>
 </ContentView>
