--- a/ArticlesApp/ArticlesApp/Views/MainPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/MainPage.xaml
@@ -24,14 +24,32 @@
                     <ImageButton Source="planeIcon.png" BackgroundColor="Transparent" HorizontalOptions="End" WidthRequest="35" Grid.Column="1" Grid.Row="0" VerticalOptions="CenterAndExpand"/>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Black" />
-                <CollectionView ItemsSource="{Binding  Articles}">
+                <CollectionView x:Name="arti" Margin="0,-6,0,0" >
                     <CollectionView.ItemsLayout>
-                        <GridItemsLayout Span="2" Orientation="Vertical" />
+                        <GridItemsLayout  Orientation="Vertical"  />
                     </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <yummy:PancakeView Border="{yummy:BorderMarkup Color={Binding diviedColor}, Thickness='1'}">
-                                
+                            <yummy:PancakeView Border="{yummy:BorderMarkup Color={Binding diviedColor}, Thickness='1'}" HeightRequest="125">
+                                <Grid Padding="7,0,0,0">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Source="me.png" WidthRequest="70" />
+                                    <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" Text="Title" HorizontalOptions="Center" Padding="0,7,0,0"/>
+                                    <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" Text="des" HorizontalOptions="Center"/>
+                                    <Label Grid.Row="2" Grid.Column="1" Text="{Binding}"/>
+                                    <Label Grid.Row="2" Grid.Column="2" Text="Date"/>
+                                    <Label Grid.Row="2" Grid.Column="3" Text="!"/>
+                                </Grid>
                             </yummy:PancakeView>
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
