--- a/ArticlesApp/ArticlesApp/Views/AddArticleDetail.xaml
+++ b/ArticlesApp/ArticlesApp/Views/AddArticleDetail.xaml
@@ -19,7 +19,7 @@
             <combobox:SfComboBox Watermark="Select interests" HeightRequest="50" x:Name="interstComboBox"  IsEditableMode="True" MultiSelectMode="Token" TokensWrapMode="Wrap" IsSelectedItemsVisibleInDropDown="false"/>
 
             <combobox:SfComboBox Watermark="Select Usres" HeightRequest="50" x:Name="UserComboBox" IsEditableMode="True" MultiSelectMode="Token" TokensWrapMode="Wrap" IsSelectedItemsVisibleInDropDown="false" />
-            <Button  TextColor="#F8FBFF"  Text="Next"  BackgroundColor ="#2934D0"  CornerRadius="29"
+            <Button Command="{Binding NavigateToPage}"  TextColor="#F8FBFF"  Text="Next"  BackgroundColor ="#2934D0"  CornerRadius="29"
                     FontFamily="Rubik" FontSize="15" HeightRequest="54"  VerticalOptions="EndAndExpand" HorizontalOptions="CenterAndExpand" WidthRequest="350" Margin="0,0,0,25" />
         </StackLayout>
     </ContentPage.Content>
