--- a/ArticlesApp/ArticlesApp/Views/SelectTypePopUp.xaml
+++ b/ArticlesApp/ArticlesApp/Views/SelectTypePopUp.xaml
@@ -2,14 +2,14 @@
 <xct:Popup xmlns="http://xamarin.com/schemas/2014/forms"
            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
-         x:Class="ArticlesApp.Views.PopupAddimage"
+         x:Class="ArticlesApp.Views.SelectTypePopUp"
              xmlns:Icons="clr-namespace:ArticlesApp.Fonts"
              VerticalOptions="End" Size="400,120">
 
     <StackLayout Orientation="Horizontal">
-        <Button Grid.Row="2" Command="{Binding ImageFromCamera}"  Clicked="PickImage" BackgroundColor="#2934D0" CornerRadius="33" HeightRequest="66" WidthRequest="66" Text="{x:Static Icons:FontIconClass.Camera}"
+        <Button Grid.Row="2" Command="{Binding ToWrite}"  Clicked="PickImage" BackgroundColor="#2934D0" CornerRadius="33" HeightRequest="66" WidthRequest="66" Text="{x:Static Icons:FontIconClass.Pencil}"
          xct:ShadowEffect.Color="#2934D0" xct:TouchEffect.AnimationDuration="50" xct:TouchEffect.PressedScale="1.1" HorizontalOptions="CenterAndExpand" VerticalOptions="Center"  FontFamily="MyIcon" FontSize="35" TextColor="White" />
-        <Button Grid.Row="2" Command="{Binding PickImageFromDevice}" Clicked="PickImage" BackgroundColor="#2934D0" CornerRadius="33" HeightRequest="66" WidthRequest="66" Text="{x:Static Icons:FontIconClass.Image}"
+        <Button Grid.Row="2" Command="{Binding ToUpload}" Clicked="PickImage" BackgroundColor="#2934D0" CornerRadius="33" HeightRequest="66" WidthRequest="66" Text="{x:Static Icons:FontIconClass.Upload}"
          xct:ShadowEffect.Color="#2934D0" xct:TouchEffect.AnimationDuration="50" xct:TouchEffect.PressedScale="1.1" HorizontalOptions="CenterAndExpand" VerticalOptions="Center" FontFamily="MyIcon" FontSize="35" TextColor="White"/>
     </StackLayout>
 
