--- a/ArticlesApp/ArticlesApp/WebViewTest.xaml
+++ b/ArticlesApp/ArticlesApp/WebViewTest.xaml
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ArticlesApp.WebViewTest">
+             x:Class="ArticlesApp.WebViewTest"
+             xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView">
     <ContentPage.Content>
-        <Frame>
+        <yummy:PancakeView>
             <WebView x:Name="webview"/>
-        </Frame>
+        </yummy:PancakeView>
     </ContentPage.Content>
 </ContentPage>
