--- a/ArticlesApp/ArticlesApp/Views/MainPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/MainPage.xaml
@@ -24,6 +24,7 @@
                     <ImageButton Source="planeIcon.png" BackgroundColor="Transparent" HorizontalOptions="End" WidthRequest="35" Grid.Column="1" Grid.Row="0" VerticalOptions="CenterAndExpand"/>
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Black" />
+                <ScrollView>
                 <CollectionView x:Name="arti" Margin="0,-6,0,0" >
                     <CollectionView.ItemsLayout>
                         <GridItemsLayout  Orientation="Vertical"  />
@@ -43,7 +44,7 @@
                                         <ColumnDefinition/>
                                         
                                     </Grid.ColumnDefinitions>
-                                    <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Source="{Binding PhotoUrl}" WidthRequest="70" />
+                                    <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Source="http://10.0.2.2:60411/Images/ArticleImage/1.jpg" WidthRequest="70" />
                                     <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Article.ArticleName}" HorizontalOptions="Center" Padding="0,7,0,0"/>
                                     <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Article.Description}" HorizontalOptions="Center"/>
                                     <Label Grid.Row="2" Grid.Column="1" Text="{Binding athours}"/>
@@ -54,6 +55,7 @@
                         </DataTemplate>
                     </CollectionView.ItemTemplate>
                 </CollectionView>
+                </ScrollView>
             </StackLayout>
             <ImageButton AbsoluteLayout.LayoutBounds="317,500,65,65" BackgroundColor="Transparent" Clicked="ImageButton_Clicked" Source="buton.png"/>
         </AbsoluteLayout>
