--- a/ArticlesApp/ArticlesApp/Views/showBeforeUpload.xaml
+++ b/ArticlesApp/ArticlesApp/Views/showBeforeUpload.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ArticlesApp.Views.showBeforeUpload"
-             xmlns:fontawesome="clr-namespace:ArticlesApp.Fonts">
+             xmlns:fontawesome="clr-namespace:ArticlesApp.Fonts"
+             NavigationPage.IconColor="Black">
     <ContentPage.Content>
         <AbsoluteLayout>
             <WebView x:Name="webview"  />
