--- a/ArticlesApp/ArticlesApp/Views/MainPage.xaml
+++ b/ArticlesApp/ArticlesApp/Views/MainPage.xaml
@@ -6,7 +6,24 @@
              NavigationPage.HasNavigationBar="False"
              xmlns:fontawesome="clr-namespace:ArticlesApp.Fonts"
              BackgroundColor="White"
->            
+>
+    <ContentView.Resources>
+        <Style TargetType="yummy:PancakeView">
+            <Setter Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList>
+                    <VisualStateGroup x:Name="CommonStates">
+                        <VisualState x:Name="Normal" />
+                        <VisualState x:Name="Selected">
+                            <VisualState.Setters>
+                                <Setter Property="BackgroundColor"
+                                        Value="Transparent" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+        </Style>
+    </ContentView.Resources>
     <ContentView.Content>
        
             <AbsoluteLayout  >
@@ -25,13 +42,13 @@
                 </Grid>
                 <BoxView HeightRequest="1" BackgroundColor="Black" />
                 <ScrollView>
-                <CollectionView x:Name="arti" Margin="0,-6,0,0" >
+                    <CollectionView x:Name="articles" Margin="0,-6,0,0"  SelectionChanged="articles_SelectionChanged" SelectionMode="Single" >
                     <CollectionView.ItemsLayout>
                         <GridItemsLayout  Orientation="Vertical"  />
                     </CollectionView.ItemsLayout>
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <yummy:PancakeView Border="{yummy:BorderMarkup Color={Binding diviedColor}, Thickness='1'}" HeightRequest="125">
+                            <yummy:PancakeView Border="{yummy:BorderMarkup Color={Binding diviedColor}, Thickness='1'}" HeightRequest="125" >
                                 <Grid Padding="7,0,0,0">
                                     <Grid.RowDefinitions>
                                         <RowDefinition/>
@@ -44,9 +61,9 @@
                                         <ColumnDefinition/>
                                         
                                     </Grid.ColumnDefinitions>
-                                    <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Source="http://10.0.2.2:60411/Images/ArticleImage/1.jpg" WidthRequest="70" />
-                                    <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Article.ArticleName}" HorizontalOptions="Center" Padding="0,7,0,0"/>
-                                    <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Article.Description}" HorizontalOptions="Center"/>
+                                      <Image Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Source="{Binding PhotoUrl,Converter={StaticResource ImageSourceConverter} }"   />
+                                    <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Article.ArticleName}"  TextColor="Black" FontSize="20" FontAttributes="Bold"   Padding="10,7,0,0"/>
+                                    <Label Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding Article.Description}" />
                                     <Label Grid.Row="2" Grid.Column="1" Text="{Binding athours}"/>
                                     <Label Grid.Row="2" Grid.Column="2" Text="{Binding date}"/>
                                    
