--- a/ArticlesApp/ArticlesApp/Views/ShowArticle.xaml
+++ b/ArticlesApp/ArticlesApp/Views/ShowArticle.xaml
@@ -4,6 +4,7 @@
              x:Class="ArticlesApp.Views.ShowArticle"
              NavigationPage.IconColor="Black" BackgroundColor="White" 
                           xmlns:fontawesome="clr-namespace:ArticlesApp.Fonts"
+             xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              
 >
     <NavigationPage.TitleView>
@@ -11,16 +12,44 @@
     </NavigationPage.TitleView>
     
     <ContentPage.Content>
-       
-       
-        <Frame>
-            
-               
-            <WebView x:Name="webview"/>
-                
-            
-        </Frame>
-      
 
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="7*" />
+                <RowDefinition Height="88*" />
+                <RowDefinition Height="5*"/>
+            </Grid.RowDefinitions>
+            <Grid x:Name="grd" Grid.Row="0" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="97*"/>
+                    <RowDefinition Height="3*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="45*"/>
+                    <ColumnDefinition Width="45*"/>
+                    <ColumnDefinition Width="10*"/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Text="by:"/>
+                <Label Grid.Row="0" Grid.Column="1" Text="Date:"/>
+                <Button Grid.Row="0" Grid.Column="2" Text="{x:Static fontawesome:FontIconClass.Star}" FontSize="16" FontFamily="MyIcon" BackgroundColor="Transparent"/>
+
+                <BoxView BackgroundColor="Black" HeightRequest="1" Grid.Row="1" Grid.ColumnSpan="3"/>
+            </Grid>
+
+            <WebView x:Name="webview" Grid.Row="1"/>
+
+            <Grid x:Name="gtd1" Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="93*"/>
+                    <ColumnDefinition Width="7*"/>
+                    
+                </Grid.ColumnDefinitions>
+                <yummy:PancakeView Grid.Column="0" CornerRadius="20" Padding="0,0,0,0">
+                <SearchBar  Placeholder="Search here to filter" BackgroundColor="Gray" />
+                </yummy:PancakeView>
+                <ImageButton Grid.Column="1" Source="ChatIcon.png" BackgroundColor="Transparent"/>
+            </Grid>
+        </Grid>
+        
     </ContentPage.Content>
 </ContentPage>
