--- a/ArticlesApp/ArticlesApp/Views/ShowArticle.xaml
+++ b/ArticlesApp/ArticlesApp/Views/ShowArticle.xaml
@@ -15,8 +15,8 @@
 
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="7*" />
-                <RowDefinition Height="88*" />
+                <RowDefinition Height="6*" />
+                <RowDefinition Height="89*" />
                 <RowDefinition Height="5*"/>
             </Grid.RowDefinitions>
             <Grid x:Name="grd" Grid.Row="0" >
@@ -29,15 +29,15 @@
                     <ColumnDefinition Width="45*"/>
                     <ColumnDefinition Width="10*"/>
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" Text="by:"/>
-                <Label Grid.Row="0" Grid.Column="1" Text="Date:"/>
-                <Button Grid.Row="0" Grid.Column="2" Text="{x:Static fontawesome:FontIconClass.Star}" FontSize="16" FontFamily="MyIcon" BackgroundColor="Transparent"/>
+                <Label Grid.Row="0" Grid.Column="0" Text="{Binding Auther}" Padding="7,0,0,0"/>
+                <Label Grid.Row="0" Grid.Column="1" Text="{Binding Date}"/>
+                <Button Grid.Row="0" Grid.Column="2" Text="{x:Static fontawesome:FontIconClass.Star}" FontSize="16"  Margin="-5,-11,0,0" FontFamily="MyIcon"  BackgroundColor="Transparent"/>
                 <BoxView BackgroundColor="Black" HeightRequest="1" Grid.Row="1" Grid.ColumnSpan="3"/>
             </Grid>
 
             <WebView x:Name="webview" Grid.Row="1"/>
 
-            <Grid x:Name="gtd1" Grid.Row="2">
+            <Grid x:Name="gtd1" Grid.Row="2" Padding="2,0,0,2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="93*"/>
                     <ColumnDefinition Width="7*"/>
