--- a/ArticlesApp/ArticlesApp/Views/ShowArticle.xaml
+++ b/ArticlesApp/ArticlesApp/Views/ShowArticle.xaml
@@ -31,7 +31,7 @@
                 </Grid.ColumnDefinitions>
                 <Label Grid.Row="0" Grid.Column="0" Text="{Binding Auther}" Padding="7,0,0,0"/>
                 <Label Grid.Row="0" Grid.Column="1" Text="{Binding Date}"/>
-                <Button Grid.Row="0" Grid.Column="2" Text="{x:Static fontawesome:FontIconClass.Star}" FontSize="16"  Margin="-5,-11,0,0" FontFamily="MyIcon"  BackgroundColor="Transparent"/>
+                <Button Grid.Row="0" Grid.Column="2" Text="{x:Static fontawesome:FontIconClass.StarOutline}" x:Name="star" Clicked="star_Clicked" FontSize="18"  Margin="-5,-11,0,0" FontFamily="MyIcon"  BackgroundColor="Transparent"/>
                 <BoxView BackgroundColor="Black" HeightRequest="1" Grid.Row="1" Grid.ColumnSpan="3"/>
             </Grid>
 
