--- a/ArticlesApp/ArticlesApp/Views/LoadingPopUp.xaml
+++ b/ArticlesApp/ArticlesApp/Views/LoadingPopUp.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <xct:Popup xmlns="http://xamarin.com/schemas/2014/forms"
            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
+             xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
+           xmlns:xctEffect="clr-namespace:Xamarin.CommunityToolkit.Effects;assembly=Xamarin.CommunityToolkit"
              xmlns:Icons="clr-namespace:ArticlesApp.Fonts"
              VerticalOptions="Center" Size="400,120"
            x:Class="ArticlesApp.Views.LoadingPopUp"
