--- a/ArticlesApp/ArticlesApp/Views/FavoriteArticle.xaml
+++ b/ArticlesApp/ArticlesApp/Views/FavoriteArticle.xaml
@@ -2,12 +2,66 @@
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ArticlesApp.Views.FavoriteArticle"
-             BackgroundColor="White">
+             BackgroundColor="White"
+             xmlns:yummy="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView">
+    <ContentView.Resources>
+        <Style TargetType="yummy:PancakeView">
+            <Setter Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList>
+                    <VisualStateGroup x:Name="CommonStates">
+                        <VisualState x:Name="Normal" />
+                        <VisualState x:Name="Selected">
+                            <VisualState.Setters>
+                                <Setter Property="BackgroundColor"
+                                        Value="Transparent" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+        </Style>
+    </ContentView.Resources>
     <ContentView.Content>
         <StackLayout Padding="20,15,17,0" Spacing="7">
-            <StackLayout>
-                <Label Text="Your Favorite Article" TextColor="#12121D" FontSize="25" FontAttributes="Bold" FontFamily="Roboto"/>
-            </StackLayout>
+            
+                <Label Text="Your Favorite Articles" TextColor="#12121D" FontSize="25" FontAttributes="Bold" FontFamily="Roboto" Padding="0,0,0,15"/>
+           
+            <CollectionView SelectionChanged="colview_SelectionChanged" SelectionMode="Single" x:Name="colview"  Margin="-12,0,-12,0" ItemsSource="{Binding Articles}" > 
+               
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout  Orientation="Vertical"
+                        Span="2"
+                        VerticalItemSpacing="20" HorizontalItemSpacing="12" />
+                        
+                                   
+                </CollectionView.ItemsLayout>
+              
+                <CollectionView.ItemTemplate>
+                <DataTemplate>
+                     <yummy:PancakeView Border="{yummy:BorderMarkup Color={Binding diviedColor}, Thickness='1'}" WidthRequest="100" HeightRequest="200">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="15*" />
+                                    <RowDefinition Height="60*" />
+                                    <RowDefinition Height="15*" />
+                                    <RowDefinition Height="10*" />
+                                    
+                                </Grid.RowDefinitions>
+                                <Label HorizontalOptions="Center" VerticalOptions="Center" Text="{Binding Article.ArticleName}" Grid.Row="0" Grid.ColumnSpan="2" TextColor="#12121D" FontSize="20" FontAttributes="Bold" FontFamily="Roboto"/>
+                                <Image HorizontalOptions="Center"  Source="{Binding PhotoUrl, Converter={StaticResource ImageSourceConverter}}" Grid.Row="1" Grid.ColumnSpan="2"/>
+                                <Label Padding="5,0,0,0"   Text="{Binding Article.Description}" Grid.Row="2" Grid.ColumnSpan="2"/>
+                                <Label  Grid.Row="3" Grid.Column="0" Text="{Binding athours}"/>
+                                <Label  Grid.Row="3" Grid.Column="1" Text="{Binding date}"/>
+                            </Grid>
+                        </yummy:PancakeView> 
+                       
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
         </StackLayout>
     </ContentView.Content>
 </ContentView>
